Fix spacing

--- a/src/client/app/settings/notifications/notifications.component.scss
+++ b/src/client/app/settings/notifications/notifications.component.scss
@@ -6,7 +6,7 @@
 }
 
 .row:first-child {
-  margin-top: 40px;
+  margin-top: 30px;
 }
 
 .label-button-row {
